feat: add redeem API
